@@ -917,3 +917,464 @@ primaryStage.show();
 
 mp.play();
 ```
+
+La única diferencia es el tamaño diferente de la escena necesaria para mostrar el fotograma completo de este clip en particular. Alternativamente, podríamos usar los métodos `MediaView autosize ()`, `preserveRatioProperty ()`, `setFitHeight ()`, `setFitWidth ()`, `fitWidthProperty ()`, `fitHeightProperty ()`, y similares, para ajustar el tamaño de la ventana incrustada y para que coincida con el tamaño de la ventana escena automáticamente. Si ejecutamos el ejemplo anterior, aparecerá la siguiente ventana emergente y reproducirá el clip:
+
+![](img/fig18.png)
+
+Incluso podemos combinar la reproducción de archivos de audio y video en paralelo, y así proporcionar una película con una banda sonora:
+
+```Java
+Text txt1 = new Text("What a beautiful movie and sound!");
+Text txt2 = new Text("If you don't hear music, turn up the volume.");
+
+File fs = new File("src/main/resources/jb.mp3");
+Media ms = new Media(fs.toURI().toString());
+MediaPlayer mps = new MediaPlayer(ms);
+MediaView mvs = new MediaView(mps);
+
+File fv = new File("src/main/resources/sea.mp4");
+Media mv = new Media(fv.toURI().toString());
+MediaPlayer mpv = new MediaPlayer(mv);
+MediaView mvv = new MediaView(mpv);
+
+VBox vb = new VBox(txt1, txt2, mvs, mvv);
+vb.setSpacing(20);
+vb.setAlignment(Pos.CENTER);
+vb.setPadding(new Insets(10, 10, 10, 10));
+
+Scene scene = new Scene(vb, 650, 500);
+primaryStage.setScene(scene);
+primaryStage.setTitle("JavaFX with embedded media player");
+primaryStage.onCloseRequestProperty()
+        .setValue(e -> System.out.println("Bye! See you later!"));
+primaryStage.show();
+
+mpv.play();
+mps.play();
+```
+
+---
+
+## Agregando efectos
+
+El paquete `javafx.scene.effects` contiene muchas clases que permiten agregar varios efectos a los nodos:
+
+  > * `Blend`: combina píxeles de dos fuentes (generalmente imágenes) utilizando uno de los modos de mezcla predefinidos
+  > * `Bloom`: hace que la imagen de entrada sea más brillante, para que parezca brillar
+  > * `BoxBlur`: agrega desenfoque a una imagen
+  > * `ColorAdjust`: permite ajustes de tono, saturación, brillo y contraste de una imagen
+  > * `ColorInput`: renderiza una región rectangular que se llena con la pintura dada
+  > * `DisplacementMap`: desplaza cada píxel por una distancia especificada
+  > * `DropShadow`: muestra una sombra del contenido dado detrás del contenido
+  > * `GaussianBlur`: agrega desenfoque utilizando un método particular (gaussiano)
+  > * `Glow`: hace que la imagen de entrada parezca brillar
+  > * `InnerShadow`: crea una sombra dentro del marco
+  > * `Lighting`: simula una fuente de luz que brilla sobre el contenido; hace que los objetos planos se vean más realistas
+  > * `MotionBlur`: simula el contenido dado visto en movimiento
+  > * `PerspectiveTransform`: transforma el contenido como se ve en perspectiva
+  > * `Reflection`: muestra una versión reflejada de la entrada debajo del contenido de entrada real
+  > * `SepiaTone`: produce un efecto de tono sepia, similar a la apariencia de fotografías antiguas
+  > * `Shadow`: crea un duplicado monocromático del contenido con bordes borrosos
+
+Todos los efectos comparten el padre: la clase abstracta `Effect`. La clase `Node` tiene el método `setEffect(Effect e)`, lo que significa que cualquiera de los efectos se puede agregar a cualquier nodo. Y esa es la forma principal de aplicar efectos a los nodos: los actores que producen una escena en un escenario (si recordamos nuestra analogía presentada al comienzo de este capítulo).
+
+La única excepción es el efecto `Blend`, que hace que su uso sea más complicado que el uso de otros efectos. Además de usar el método `setEffect(Effect e)`, algunos de los hijos de la clase `Node` también tienen el método `setBlendMode(BlendMode bm)`, que permite regular cómo las imágenes se mezclan entre sí cuando se superponen. Por lo tanto, es posible establecer diferentes efectos de mezcla de diferentes maneras que se anulan entre sí y producen un resultado inesperado que puede ser difícil de depurar. Eso es lo que hace que el uso del efecto `Blend` sea más complicado, y es por eso que vamos a comenzar la descripción general de cómo se puede usar el efecto `Blend`.
+
+Hay cuatro aspectos que regulan la apariencia del área donde se superponen dos imágenes (utilizamos dos imágenes en nuestros ejemplos para hacerlo más simple, pero, en la práctica, muchas imágenes pueden superponerse):
+
+  > * **El valor de la propiedad de opacidad**: define cuánto se puede ver a través de la imagen; el valor de opacidad $0.0$ significa que la imagen es completamente transparente, mientras que el valor de opacidad $1.0$ significa que no se puede ver nada detrás de ella.
+  > * **El valor alfa y la fuerza de cada color**: Esto define la transparencia del color como un valor doble en el rango $0.0-1.0$ o $0-255$.
+  > * **El modo de fusión, definido por el valor `enum BlendMode`**: según el modo, la opacidad y el valor alfa de cada color, el resultado también puede depender de la secuencia en la que se agregaron las imágenes a la escena; la primera imagen agregada se denomina entrada inferior, mientras que la segunda de las imágenes superpuestas se denomina entrada superior; Si la entrada superior es completamente opaca, la entrada inferior queda oculta por la entrada superior.
+
+El aspecto resultante del área de superposición se calcula en función de la opacidad, los valores alfa de los colores, los valores numéricos (fuerza) de los colores y el modo de fusión, que puede ser uno de los siguientes:
+
+  > * `ADD`: los componentes de color y alfa de la entrada superior se agregan a los de la entrada inferior
+  > * `Blue`: El componente azul de la entrada inferior se reemplaza con el componente azul de la entrada superior; los otros componentes de color no se ven afectados
+  > * `COLOR_BURN`: el inverso de los componentes de color de entrada inferiores se divide por los componentes de color de entrada superiores, que luego se invierten para producir el color resultante
+  > * `COLOR_DODGE`: los componentes de color de entrada inferiores se dividen por el inverso de los componentes de color de entrada superiores para producir el color resultante
+  > * `DARKEN`: el más oscuro de los componentes de color de las dos entradas se selecciona para producir el color resultante
+  > * `DIFFERENCE`: el más oscuro de los componentes de color de las dos entradas se resta de los más claros para producir el color resultante
+  > * `EXCLUSION`: Los componentes de color de las dos entradas se multiplican y duplican, y luego se restan de la suma de los componentes de color de entrada inferiores, para producir el color resultante.
+  > * `GREEN`: El componente verde de la entrada inferior se reemplaza con el componente verde de la entrada superior; los otros componentes de color no se ven afectados
+  > * `HARD_LIGHT`: los componentes de color de entrada se multiplican o se seleccionan, según el color de entrada superior
+  > * `LIGHTEN`: se selecciona el más claro de los componentes de color de las dos entradas para producir el color resultante
+  > * `MULTIPLY`: los componentes de color de la primera entrada se multiplican por los de la segunda entrada
+  > * `OVERLAY`: los componentes de color de entrada se multiplican o se seleccionan, según el color de entrada inferior
+  > * `RED`: El componente rojo de la entrada inferior se reemplaza con el componente rojo de la entrada superior; los otros componentes de color no se ven afectados
+  > * `SCREEN`: Los componentes de color de ambas entradas se invierten, se multiplican entre sí, y ese resultado se invierte nuevamente para producir el color resultante.
+  > * `SOFT_LIGHT`: los componentes de color de entrada se oscurecen o se iluminan, según el color de entrada superior
+  > * `SRC_ATOP`: la parte de la entrada superior que se encuentra dentro de la entrada inferior se combina con la entrada inferior
+  > * `SRC_OVER`: la entrada superior se combina sobre la entrada inferior
+
+Para demostrar el efecto `Blend`, creemos otra aplicación llamada `BlendEffect`. No requiere los paquetes `com.sun. *`, Por lo que las opciones `--add-export` VM no son necesarias. Solo las opciones `--module-path` y `--add-modules`, descritas en la sección Fundamentos de JavaFX, deben configurarse para la compilación y ejecución.
+
+```Java
+Circle createCircle(){
+    Circle c = new Circle();
+    c.setFill(Color.rgb(255, 0, 0, 0.5));
+    c.setRadius(25);
+    return c;
+}
+
+Rectangle createSquare(){
+    Rectangle r = new Rectangle();
+    r.setFill(Color.rgb(0, 0, 255, 1.0));
+    r.setWidth(50);
+    r.setHeight(50);
+    return r;
+}
+```
+
+Utilizamos el método `Color.rgb (int red, int green, int blue, double alpha)` para definir los colores de cada una de las figuras. Pero hay muchas más formas de hacerlo. Lea la documentación de la clase de color [API](https://openjfx.io/javadoc/11/javafx.graphics/javafx/scene/paint/Color.html) para más detalles .
+
+Para superponer el círculo y el cuadrado creados, usaremos el nodo Grupo:
+
+```Java
+Node c = createCircle();
+Node s = createSquare();
+Node g = new Group(s, c);
+```
+
+En el código anterior, el cuadrado es una entrada inferior. También crearemos un grupo donde el cuadrado es una entrada superior:
+
+```Java
+Node c = createCircle();
+Node s = createSquare();
+Node g = new Group(c, s);
+```
+
+La distinción es importante porque definimos el círculo como medio opaco, mientras que el cuadrado era completamente opaco. Usaremos la misma configuración en todos nuestros ejemplos.
+
+Comparemos los dos modos, `MULTIPLY` y `SRC_OVER`. Los configuraremos en los grupos, utilizando el método `setEffect ()` de la siguiente manera:
+
+```Java
+Blend blnd = new Blend();
+blnd.setMode(BlendMode.MULTIPLY);
+Node c = createCircle();
+Node s = createSquare();
+Node g = new Group(s, c);
+g.setEffect(blnd);
+```
+
+Para cada modo, creamos dos grupos, uno con la entrada donde el círculo está en la parte superior del cuadrado, otro con la entrada donde el cuadrado está en la parte superior del círculo, y colocamos los cuatro grupos creados en un diseño `GridPane` (vea el código fuente para más detalles). Si ejecutamos la aplicación `BlendEffect`, el resultado será este:
+
+![](img/fig19.png)
+
+Como era de esperar, cuando el cuadrado está en la parte superior (las dos imágenes a la derecha), el área opaca toma completamente el área superpuesta. Pero, cuando el círculo es una entrada superior (las dos imágenes de la izquierda), el área superpuesta es algo visible y calculada en función del efecto de fusión.
+
+Sin embargo, si establecemos el mismo modo directamente en el grupo, el resultado será ligeramente diferente. Ejecutemos el mismo código pero con el modo establecido en el grupo:
+
+```Java
+Node c = createCircle();
+Node s = createSquare();
+Node g = new Group(c, s);
+g.setBlendMode(BlendMode.MULTIPLY);
+```
+
+Si ejecutamos la aplicación nuevamente, el resultado sería
+
+![](img/fig20.png)
+
+Como puede ver, el color rojo del círculo ha cambiado ligeramente y no hay diferencia entre los modos `MULTIPLY` y `SRC_OVER`. Ese es el problema con la secuencia de agregar los nodos a la escena que mencionamos al comienzo de la sección.
+
+El resultado también cambia según el nodo en el que se establece el efecto. Por ejemplo, en lugar de establecer el efecto en el grupo, configuremos el efecto de fusión solo en el círculo:
+
+```Java
+Blend blnd = new Blend();
+blnd.setMode(BlendMode.MULTIPLY);
+Node c = createCircle();
+Node s = createSquare();
+c.setEffect(blnd);
+Node g = new Group(s, c);
+```
+
+Nuevamente ejecutamos el código y obtendremos
+
+![](img/fig21.png)
+
+Las dos imágenes de la derecha siguen siendo las mismas que en todos los ejemplos anteriores, pero las dos imágenes de la izquierda muestran los nuevos colores del área superpuesta. Ahora configuremos el mismo efecto de mezcla en el cuadrado en lugar del círculo de la siguiente manera:
+
+```Java
+Blend blnd = new Blend();
+blnd.setMode(BlendMode.MULTIPLY);
+Node c = createCircle();
+Node s = createSquare();
+s.setEffect(blnd);
+Node g = new Group(s, c);
+```
+
+El resultado cambiará ligeramente nuevamente y se verá como se presenta en la siguiente captura de pantalla:
+
+![](img/fig22.png)
+
+No hay diferencia entre los modos `MULTIPLY` y `SRC_OVER`, pero el color rojo es diferente al que teníamos cuando configuramos el efecto en el círculo.
+
+Podemos cambiar el enfoque nuevamente y establecer el modo de efecto de fusión directamente en el círculo solamente, usando el siguiente código:
+
+```Java
+Node c = createCircle();
+Node s = createSquare();
+c.setBlendMode(BlendMode.MULTIPLY);
+```
+
+el resultado nuevamente cambia
+
+![](img/fig23.png)
+
+Establecer el modo de mezcla en el cuadrado solo elimina la diferencia entre los modos `MULTIPLY` y `SRC_OVER` nuevamente:
+
+![](img/fig24.png)
+
+Para evitar confusiones y hacer que los resultados de la mezcla sean más predecibles, debe observar la secuencia en la que se agregan los nodos a la escena y la consistencia de la forma en que se aplica el efecto de mezcla.
+
+El código fuente se encuentra como anexo a este documento, el cual el resultado sería.
+
+![](img/fig25.png)
+
+Para su conveniencia, se proporcionan botones Pausa y Continuar que le permiten pausar la demostración y revisar el resultado para diferentes valores de opacidad establecidos en el efecto de mezcla.
+
+### Otros efectos
+
+Para demostrar todos los demás efectos, hemos creado otra aplicación llamada `OtherEffects` que tampoco requiere los paquetes `com.sun. *`, Por lo que las opciones `--add-export` VM no son necesarias. Los efectos demostrados incluyen `Bloom`, `BoxBlur`,` ColorAdjust`, `DisplacementMap`, `DropShadow`, `Glow`, `InnerShadow`, `Lighting`, `MotionBlur`, `PerspectiveTransform`, `Reflection`, `ShadowTone` y `SepiaTone`. Hemos utilizado dos imágenes para presentar el resultado de aplicar cada uno de los efectos, el logotipo de Packt y una vista al lago de montaña:
+
+```Java
+FileInputStream inputP = 
+                   new FileInputStream("src/main/resources/packt.png");
+Image imageP = new Image(inputP);
+ImageView ivP = new ImageView(imageP);
+
+FileInputStream inputM = 
+                  new FileInputStream("src/main/resources/mount.jpeg");
+Image imageM = new Image(inputM);
+ImageView ivM = new ImageView(imageM);
+ivM.setPreserveRatio(true);
+ivM.setFitWidth(300);
+```
+
+También hemos agregado dos botones que le permiten pausar y continuar la demostración (itera sobre el efecto y los valores de sus parámetros):
+
+```Java
+Button btnP = new Button("Pause");
+btnP.setOnAction(e1 -> et.pause());
+btnP.setStyle("-fx-background-color: lightpink;");
+
+Button btnC = new Button("Continue");
+btnC.setOnAction(e2 -> et.cont());
+btnC.setStyle("-fx-background-color: lightgreen;");
+```
+
+El objeto `et` es el objeto del hilo `EffectsThread`:
+
+  > * `EffectsThread et = new EffectsThread(txt, ivM, ivP);`
+
+El hilo pasa por la lista de efectos, crea un efecto correspondiente 10 veces (con 10 valores de parámetros de efectos diferentes) y, cada vez, establece el objeto de efecto creado en cada una de las imágenes, luego duerme durante un segundo para darle un oportunidad de revisar el resultado:
+
+```Java
+public void run(){
+    try {
+        for(String effect: effects){
+            for(int i = 0; i < 11; i++){
+                double d = Math.round(i * 0.1 * 10.0) / 10.0;
+                Effect e = createEffect(effect, d, txt);
+                ivM.setEffect(e);
+                ivP.setEffect(e);
+                TimeUnit.SECONDS.sleep(1);
+                if(pause){
+                    while(true){
+                        TimeUnit.SECONDS.sleep(1);
+                        if(!pause){
+                            break;
+                        }
+                    }
+                }
+            }
+        }
+        Platform.exit();
+    } catch (Exception ex){
+        ex.printStackTrace();
+    }
+}
+```
+
+Mostraremos cómo se crea cada efecto a continuación, debajo de la captura de pantalla con el resultado del efecto. Para presentar el resultado, hemos utilizado el diseño `GridPane`:
+
+```Java
+GridPane grid = new GridPane();
+grid.setAlignment(Pos.CENTER);
+grid.setVgap(25);
+grid.setPadding(new Insets(10, 10, 10, 10));
+
+int i = 0;
+grid.add(txt,    0, i++, 2, 1);
+GridPane.setHalignment(txt, HPos.CENTER);
+grid.add(ivP,    0, i++, 2, 1);
+GridPane.setHalignment(ivP, HPos.CENTER);
+grid.add(ivM,    0, i++, 2, 1);
+GridPane.setHalignment(ivM, HPos.CENTER);
+grid.addRow(i++, new Text());
+HBox hb = new HBox(btnP, btnC);
+hb.setAlignment(Pos.CENTER);
+hb.setSpacing(25);
+grid.add(hb,    0, i++, 2, 1);
+GridPane.setHalignment(hb, HPos.CENTER);
+```
+
+Y, finalmente, el objeto `GridPane` creado se pasó a la escena, que a su vez se colocó en un escenario familiar para usted en nuestros ejemplos anteriores:
+
+```Java
+Scene scene = new Scene(grid, 450, 500);
+primaryStage.setScene(scene);
+primaryStage.setTitle("JavaFX effect demo");
+primaryStage.onCloseRequestProperty()
+            .setValue(e3 -> System.out.println("Bye! See you later!"));
+primaryStage.show();
+```
+
+Las siguientes capturas de pantalla muestran ejemplos de los efectos de 1 de los 10 valores de parámetros. Debajo de cada captura de pantalla, presentamos el fragmento de código del método `createEffect(String effect, double d, Text txt)` que creó este efecto:
+
+![](img/fig26.png)
+
+```Java
+//double d = 0.9;
+txt.setText(effect + ".threshold: " + d);
+Bloom b = new Bloom();
+b.setThreshold(d);
+```
+
+![](img/fig27.png)
+
+```Java
+// double d = 0.3;
+int i = (int) d * 10;
+int it = i / 3;
+txt.setText(effect + ".iterations: " + it);
+BoxBlur bb = new BoxBlur();
+bb.setIterations(i);
+```
+
+![](img/fig28.png)
+
+```Java
+double c = Math.round((-1.0 + d * 2) * 10.0) / 10.0;      // 0.6
+txt.setText(effect + ": " + c);
+ColorAdjust ca = new ColorAdjust();
+ca.setContrast(c);
+```
+
+![](img/fig29.png)
+
+```Java
+double h = Math.round((-1.0 + d * 2) * 10.0) / 10.0;     // 0.6
+txt.setText(effect + ": " + h);
+ColorAdjust ca1 = new ColorAdjust();
+ca1.setHue(h);
+```
+
+![](img/fig30.png)
+
+```Java
+double st = Math.round((-1.0 + d * 2) * 10.0) / 10.0;    // 0.6
+txt.setText(effect + ": " + st);
+ColorAdjust ca3 = new ColorAdjust();
+ca3.setSaturation(st);
+```
+
+![](img/fig31.png)
+
+```Java
+int w = (int)Math.round(4096 * d);  //819
+int h1 = (int)Math.round(4096 * d); //819
+txt.setText(effect + ": " + ": width: " + w + ", height: " + h1);
+DisplacementMap dm = new DisplacementMap();
+FloatMap floatMap = new FloatMap();
+floatMap.setWidth(w);
+floatMap.setHeight(h1);
+for (int k = 0; k < w; k++) {
+    double v = (Math.sin(k / 20.0 * Math.PI) - 0.5) / 40.0;
+    for (int j = 0; j < h1; j++) {
+        floatMap.setSamples(k, j, 0.0f, (float) v);
+    }
+}
+dm.setMapData(floatMap);
+```
+
+![](img/fig32.png)
+
+```Java
+double rd = Math.round((127.0 * d) * 10.0) / 10.0; // 127.0
+System.out.println(effect + ": " + rd);
+txt.setText(effect + ": " + rd);
+DropShadow sh = new DropShadow();
+sh.setRadius(rd);
+```
+
+![](img/fig33.png)
+
+```Java
+double rad = Math.round(12.1 * d *10.0)/10.0;      // 9.7
+double off = Math.round(15.0 * d *10.0)/10.0;      // 12.0
+txt.setText("InnerShadow: radius: " + rad + ", offset:" + off);
+InnerShadow is = new InnerShadow();
+is.setColor(Color.web("0x3b596d"));
+is.setOffsetX(off);
+is.setOffsetY(off);
+is.setRadius(rad);
+```
+
+![](img/fig34.png)
+
+```Java
+double sS = Math.round((d * 4)*10.0)/10.0;      // 0.4
+txt.setText(effect + ": " + sS);
+Light.Spot lightSs = new Light.Spot();
+lightSs.setX(150);
+lightSs.setY(100);
+lightSs.setZ(80);
+lightSs.setPointsAtX(0);
+lightSs.setPointsAtY(0);
+lightSs.setPointsAtZ(-50);
+lightSs.setSpecularExponent(sS);
+Lighting lSs = new Lighting();
+lSs.setLight(lightSs);
+lSs.setSurfaceScale(5.0);
+```
+
+![](img/fig35.png)
+
+```Java
+double r = Math.round((63.0 * d)*10.0) / 10.0;      // 31.5
+txt.setText(effect + ": " + r);
+MotionBlur mb1 = new MotionBlur();
+mb1.setRadius(r);
+mb1.setAngle(-15);
+```
+
+![](img/fig36.png)
+
+```Java
+// double d = 0.9;
+txt.setText(effect + ": " + d); 
+PerspectiveTransform pt =
+        new PerspectiveTransform(0., 1. + 50.*d, 310., 50. - 50.*d,
+                   310., 50. + 50.*d + 1., 0., 100. - 50. * d + 2.);
+
+```
+
+![](img/fig37.png)
+
+```Java
+// double d = 0.6;
+txt.setText(effect + ": " + d);
+Reflection ref = new Reflection();
+ref.setFraction(d);
+```
+
+![](img/fig38.png)
+
+```Java
+// double d = 1.0;
+txt.setText(effect + ": " + d);
+SepiaTone sep = new SepiaTone();
+sep.setLevel(d);
+```
